# minichat

./: .gitignore  .sesskey  License  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 01fcca8e14da_add_user_id_foreign_key_to_chat_line.py  47daf7dba8ba_fxi_imageline_mode.py  b8e0057d91b6_add_imageline_mode.py  ed1797f5ea1f_add_usertype.py
src/: server_run.py
src/ft_client/: app.py  custom_css.py  custom_js.py
src/minichat/: __init__.py  app.py  client_claude.py  client_coze.py  client_dalle3.py  client_openai.py  config_schema.py  db_moldes.py  logbot.py  minichat..examp;e.json  protocols.py
src/minichat/misc/: __init__.py  utils.py
src/users_admin/: README.md  action.py  data_model.py  provider.py
src/users_admin/provides/: apptypes.py  github_provider.py  google_provider.py  protocols.py  providertpyes.py  userdata.py
typings/fasthtml/: authmw.pyi  basics.pyi  cli.pyi  common.pyi  components.pyi  core.pyi  fastapp.pyi  ft.pyi  js.pyi  live_reload.pyi  oauth.pyi  svg.pyi  toaster.pyi  xtend.pyi
