[project]
name = "minichat"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "26awen", email = "26awen@gmail.comm" }
]
dependencies = [
    "openai>=1.14.0",
    "rich>=13.7.1",
    "pydantic>=2.7.1",
    "sqlalchemy>=2.0.30",
    "requests>=2.32.3",
    "alembic>=1.13.2",
    "init>=0.1.0",
    "flask>=3.0.3",
    "flask-restful>=0.3.10",
    "click>=8.1.7",
    "loguru>=0.7.2",
    "gunicorn>=22.0.0",
    "anthropic>=0.31.2",
    "flask-alembic>=3.1.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.152",
    "python-fasthtml>=0.4.1",
    "unicon>=24.7",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/minichat"]
